# Advanced-Data-Mining

./: .gitignore  README.md  requirements.txt
parcial_01_neural_network/notebooks/: parcial_01_neural_network.ipynb
parcial_01_neural_network/output/: parcial_01_neural_network.html
tarea_01_diabetes/notebooks/: Notebook - Tarea 2.ipynb  clase2_problema_de_clasificacion_diabetes.ipynb
tarea_03_meatspec/notebooks/: Notebook - Tarea 3.ipynb  sesion_3_pca.ipynb
tarea_04_cpu_vs_gpu/: pyproject.toml  requirements.txt
tarea_04_cpu_vs_gpu/data/: NVIDIA_Stock_Prices.csv
tarea_04_cpu_vs_gpu/notebooks/: tarea_04_nvidia_cpu_vs_gpu.ipynb
