[project]
name = "tarea-04-cpu-vs-gpu"
version = "0.1.0"
description = ""
authors = [
    {name = "ErikssonHerlo",email = "erikssonhernandez201830459@cunoc.edu.gt"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "jupyterlab (>=4.5.7,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "tensorflow[and-cuda] (>=2.21,<3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
